2004-11-04  Michael Peppler  <mpeppler@peppler.org>

	* src/cmd_connect.c (cmd_connect): First try at implementing 
	optionally setting "chained" mode on connect.

	* aclocal.m4 (AC_SYBASE_ASE): Change the order of the libraries
	so that static linking will work.

	* src/cmd_read.c (cmd_read): Add check to make sure that
	we read data from the terminal in all cases. This means
	checking sqsh_stdin_isatty() and possibly opening /dev/tty
	for reading in the case where sqsh is run with its input
	redirected.

2004-04-12  Michael Peppler  <mpeppler@peppler.org>

	* src/cmd_bcp.c (cmd_bcp): Add logic to use the correct
	BLK_VERSION_xxx value corresponding to the CS_VERSION_xxx used
	when Client Library was initialized and the CS_CONTEXT was
	allocated in cmd_connect.h

	* src/sqsh_global.c (g_cs_ver): Add global variable to hold the
	value of the current CS_VERSION_xxx. Needed in cmd_bcp.c to
	correctly initialize the BLK command.

	* configure.in: Fixed configure script issues with obsolete macros
	and incorrect handling of libraries for the readline test.

2004-04-10  Michael Peppler  <mpeppler@peppler.org>

	* src/dsp_meta.c (dsp_meta): Applied patch from Andrew Pimlott to
	handle sqsh hanging when one interrupts output that is piped to
	another program.

	* src/sqsh_expand.c (expand_variable): Applied patch from Michael
	Chepelev for core dumps when expanding $$ $, etc. This bit of code
	is currently #ifdef'd pending complete testing of variable
	expansion. 

	* src/cmd_func.c (cmd_call): Apply patch from Bin Mu to fix
	segfault when using \call without a function name.

	* src/cmd_bcp.c (cmd_bcp): Apply patch from Onno van der Linden to
	avoid potential divide by 0 error.

2004-04-09  Michael Peppler  <mpeppler@peppler.org>

	* src/dsp_desc.c (dsp_desc_fetch): Add support for CS_DATE_TYPE
	and CS_TIME_TYPE.

	* src/dsp_meta.c (dsp_meta_transtate): Add support for
	CS_DATE_TYPE and CS_TIME_TYPE.

	* src/dsp_desc.c (dsp_desc_fetch): CS_ROW_FAIL return codes from