@@ -1,13 +1,19 @@
 file /home/mpeppler/src/sqsh-cvs/sqsh/src/sqsh
-b main
-run -Usa -P -Slocalhost -n on
+up
+run -Usa -P -Slocalhost -i /home/mpeppler/tmp/test.sqsh
+b expand_skip_comment
+r
+up
+run
+r
+up
+down
+print g_sqlbuf
+print *g_sqlbuf
+up
+run -Usa -P -Slocalhost -i /tmp/go.sql
 next
-step
-next
-step
-next
-b cmd_connect
+p str
 cont
-next
 quit
 
